Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109708

Startup crash in QRhiD3D11::endFrame() with nullptr access

    XMLWordPrintable

Details

    • Windows
    • 2581bed66 (dev), 758e249f6 (6.6), 309b5c2ee (6.5), adf7b8c8c (tqtc/lts-6.2), c9354149f (tqtc/lts-6.5), c738a349d (dev), 965c237aa (6.7), 47ccda4a1 (6.6), 96299182f (dev), 32b4d8bb1 (6.7), bb28e7e14 (6.6)

    Description

      I see such crashes among our users crash reports. It's never reproduced for me locally and I have no idea why this may happen for end users.

      Unhandled exception at 0x00007FFE67B9E1C3 (Qt6Gui.dll) in minidump (10).dmp: 0xC0000005: Access violation reading location 0x0000000000000000.
      

      Stack:

      >	Qt6Gui.dll!QRhiD3D11::endFrame(QRhiSwapChain * swapChain, QFlags<enum QRhi::EndFrameFlag> flags) Line 1185	C++
       	Qt6Gui.dll!QRhi::endFrame(QRhiSwapChain * swapChain, QFlags<enum QRhi::EndFrameFlag> flags) Line 6799	C++
       	Qt6Quick.dll!QSGRenderThread::syncAndRender() Line 792	C++
       	Qt6Quick.dll!QSGRenderThread::run() Line 990	C++
       	Qt6Core.dll!QThreadPrivate::start(void * arg) Line 328	C++
       	kernel32.dll!BaseThreadInitThunk()	Unknown
       	ntdll.dll!RtlUserThreadStart()	Unknown
      

       

      Seems swapChainD->swapChain might be nullptr in some cases and this provokes the crash.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-109708
          # Subject Branch Project Status CR V

          Activity